--- a/src/home/Home.fxml
+++ b/src/home/Home.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -31,9 +32,9 @@
                   <Insets bottom="100.0" />
                </VBox.margin>
             </Label>
-            <Button fx:id="btnOverview" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" stylesheets="@style.css" text="Mes listes" textFill="#e7e5e5">
+            <Button fx:id="btnOverview" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Mes listes" textFill="#e7e5e5">
                <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/SideBarIcons/Listes.png" />
                      </image>
@@ -48,10 +49,13 @@
                <padding>
                   <Insets left="50.0" />
                </padding>
+               <font>
+                  <Font name="Montserrat-Regular" size="14.0" />
+               </font>
             </Button>
-            <Button fx:id="btnOrders" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" stylesheets="@style.css" text="Statistiques">
+            <Button fx:id="btnOrders" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Statistiques">
                <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/SideBarIcons/chart.png" />
                      </image>
@@ -60,10 +64,13 @@
                <padding>
                   <Insets left="50.0" />
                </padding>
+               <font>
+                  <Font name="Montserrat-Regular" size="14.0" />
+               </font>
             </Button>
-            <Button fx:id="btnCustomers" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" stylesheets="@style.css" text="Accueil">
+            <Button fx:id="btnCustomers" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Accueil">
                <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/SideBarIcons/Accueil.png" />
                      </image>
@@ -72,10 +79,13 @@
                <padding>
                   <Insets left="50.0" />
                </padding>
+               <font>
+                  <Font name="Montserrat-Regular" size="14.0" />
+               </font>
             </Button>
-            <Button fx:id="btnMenus" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="42.0" prefWidth="259.0" stylesheets="@style.css" text="Gérer les étudiants">
+            <Button fx:id="btnMenus" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Gérer les étudiants">
                <graphic>
-                  <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@../images/SideBarIcons/Etudiants.png" />
                      </image>
@@ -84,12 +94,31 @@
                <padding>
                   <Insets left="50.0" />
                </padding>
+               <font>
+                  <Font name="Montserrat-Regular" size="14.0" />
+               </font>
             </Button>
-            <Button fx:id="btnPackages" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="259.0" stylesheets="@style.css" text="Mes notes">
+            <Button fx:id="btnPackages" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Mes notes">
+               <graphic>
+                  <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/SideBarIcons/Notes.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+               <font>
+                  <Font name="Montserrat-Regular" size="14.0" />
+               </font>
+            </Button>
+            <Region VBox.vgrow="ALWAYS" />
+            <Button fx:id="btnLogOut" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="259.0" stylesheets="@style.css" text="Se déconnécter">
                <graphic>
                   <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../images/SideBarIcons/Notes.png" />
+                        <Image url="@../images/SideBarIcons/deconnecter.png" />
                      </image>
                   </ImageView>
                </graphic>
