--- a/src/home/Home.fxml
+++ b/src/home/Home.fxml
@@ -3,6 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -12,140 +15,190 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="676.0" prefWidth="1200.0" style="-fx-background-color: #02030A;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="home.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="676.0"
+            prefWidth="1200.0" style="-fx-background-color: #02030A;" xmlns="http://javafx.com/javafx/11.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="home.Controller">
     <children>
-        <VBox alignment="TOP_CENTER" prefHeight="576.0" prefWidth="256.0" style="-fx-background-color: #05071F;" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <VBox alignment="TOP_CENTER" prefHeight="576.0" prefWidth="256.0" style="-fx-background-color: #05071F;"
+              AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
                 <ImageView fitHeight="73.0" fitWidth="67.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@../images/jimmy-fallon.png" />
+                        <Image url="@../images/jimmy-fallon.png"/>
                     </image>
                     <VBox.margin>
-                        <Insets bottom="10.0" top="50.0" />
+                        <Insets bottom="10.0" top="50.0"/>
                     </VBox.margin>
                 </ImageView>
                 <Label text="Nom User Connecté" textFill="#e7e5e5">
                     <VBox.margin>
-                        <Insets bottom="100.0" />
+                        <Insets bottom="100.0"/>
                     </VBox.margin>
                 </Label>
-                <Button fx:id="btnAccueil" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Accueil">
+                <Button fx:id="btnAccueil" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false"
+                        prefHeight="60.0" prefWidth="259.0" style="-fx-background-radius :  30 0 0 30;"
+                        stylesheets="@style.css" text="Accueil">
                     <graphic>
                         <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../images/SideBarIcons/Accueil.png" />
+                                <Image url="@../images/SideBarIcons/Accueil.png"/>
                             </image>
                         </ImageView>
                     </graphic>
                     <padding>
-                        <Insets left="50.0" />
+                        <Insets left="50.0"/>
                     </padding>
                     <font>
-                        <Font name="Montserrat-Regular" size="14.0" />
+                        <Font name="Montserrat-Regular" size="14.0"/>
                     </font>
                 </Button>
-                <Button fx:id="btnListes" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Mes listes" textFill="#e7e5e5">
+                <Button fx:id="btnListes" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false"
+                        style="-fx-background-radius :  30 0 0 30;"
+                        prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Mes listes"
+                        textFill="#e7e5e5">
                     <graphic>
                         <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../images/SideBarIcons/Listes.png" />
+                                <Image url="@../images/SideBarIcons/Listes.png"/>
                             </image>
                         </ImageView>
                     </graphic>
                     <opaqueInsets>
-                        <Insets />
+                        <Insets/>
                     </opaqueInsets>
                     <VBox.margin>
-                        <Insets />
+                        <Insets/>
                     </VBox.margin>
                     <padding>
-                        <Insets left="50.0" />
+                        <Insets left="50.0"/>
                     </padding>
                     <font>
-                        <Font name="Montserrat-Regular" size="14.0" />
+                        <Font name="Montserrat-Regular" size="14.0"/>
                     </font>
                 </Button>
-                <Button fx:id="btnStatistiques" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Statistiques">
+                <Button fx:id="btnStatistiques" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false"
+                        style="-fx-background-radius :  30 0 0 30;"
+                        prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Statistiques">
                     <graphic>
                         <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../images/SideBarIcons/chart.png" />
+                                <Image url="@../images/SideBarIcons/chart.png"/>
                             </image>
                         </ImageView>
                     </graphic>
                     <padding>
-                        <Insets left="50.0" />
+                        <Insets left="50.0"/>
                     </padding>
                     <font>
-                        <Font name="Montserrat-Regular" size="14.0" />
+                        <Font name="Montserrat-Regular" size="14.0"/>
                     </font>
                 </Button>
-                <Button fx:id="btnGestion" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Gérer les étudiants">
+                <Button fx:id="btnGestion" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false"
+                        style="-fx-background-radius :  30 0 0 30;"
+                        prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Gérer les étudiants">
                     <graphic>
                         <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../images/SideBarIcons/Etudiants.png" />
+                                <Image url="@../images/SideBarIcons/Etudiants.png"/>
                             </image>
                         </ImageView>
                     </graphic>
                     <padding>
-                        <Insets left="50.0" />
+                        <Insets left="50.0"/>
                     </padding>
                     <font>
-                        <Font name="Montserrat-Regular" size="14.0" />
+                        <Font name="Montserrat-Regular" size="14.0"/>
                     </font>
                 </Button>
-                <Button fx:id="btnNotes" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css" text="Mes notes">
+                <Button fx:id="btnNotes" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false"
+                        style="-fx-background-radius :  30 0 0 30;"
+                        onAction="#btnNotes_click" prefHeight="60.0" prefWidth="259.0" stylesheets="@style.css"
+                        text="Mes notes">
                     <graphic>
                         <ImageView fitHeight="40.0" fitWidth="102.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../images/SideBarIcons/Notes.png" />
+                                <Image url="@../images/SideBarIcons/Notes.png"/>
                             </image>
                         </ImageView>
                     </graphic>
                     <padding>
-                        <Insets left="50.0" />
+                        <Insets left="50.0"/>
                     </padding>
                     <font>
-                        <Font name="Montserrat-Regular" size="14.0" />
+                        <Font name="Montserrat-Regular" size="14.0"/>
                     </font>
                 </Button>
-                <Region VBox.vgrow="ALWAYS" />
-                <Button fx:id="btnLogOut" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="259.0" stylesheets="@style.css" text="Se déconnécter">
+                <Region VBox.vgrow="ALWAYS"/>
+                <Button fx:id="btnLogOut" alignment="BASELINE_LEFT" graphicTextGap="22.0" mnemonicParsing="false"
+                        prefHeight="42.0" prefWidth="259.0" stylesheets="@style.css" text="Se déconnécter">
                     <graphic>
                         <ImageView fitHeight="23.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                             <image>
-                                <Image url="@../images/SideBarIcons/deconnecter.png" />
+                                <Image url="@../images/SideBarIcons/deconnecter.png"/>
                             </image>
                         </ImageView>
                     </graphic>
                     <padding>
-                        <Insets left="50.0" />
+                        <Insets left="50.0"/>
                     </padding>
                 </Button>
             </children>
         </VBox>
-        <Button fx:id="btnClose" alignment="BASELINE_LEFT" graphicTextGap="22.0" layoutX="1168.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnClose_Click" prefHeight="25.0" prefWidth="29.0" style="-fx-background-color: transparent; -fx-padding: 0;" stylesheets="@style.css">
+        <Button fx:id="btnClose" alignment="BASELINE_LEFT" graphicTextGap="22.0" layoutX="1168.0" layoutY="2.0"
+                maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                mnemonicParsing="false" onAction="#btnClose_Click" prefHeight="25.0" prefWidth="29.0"
+                style="-fx-background-color: transparent; -fx-padding: 0;" stylesheets="@style.css">
             <graphic>
                 <ImageView fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-                    <Image backgroundLoading="true" url="@../images/HboxIcons/close.png" />
+                    <Image backgroundLoading="true" url="@../images/HboxIcons/close.png"/>
                 </ImageView>
             </graphic>
         </Button>
-        <Button fx:id="btnMinimize" alignment="BASELINE_LEFT" graphicTextGap="22.0" layoutX="1133.0" layoutY="2.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#btnMinimize_Click" prefHeight="25.0" prefWidth="29.0" style="-fx-background-color: transparent; -fx-padding: 0;" stylesheets="@style.css">
+        <Button fx:id="btnMinimize" alignment="BASELINE_LEFT" graphicTextGap="22.0" layoutX="1133.0" layoutY="2.0"
+                maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+                mnemonicParsing="false" onAction="#btnMinimize_Click" prefHeight="25.0" prefWidth="29.0"
+                style="-fx-background-color: transparent; -fx-padding: 0;" stylesheets="@style.css">
             <graphic>
-                <ImageView fx:id="imgViewMinimize" fitHeight="29.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fx:id="imgViewMinimize" fitHeight="29.0" fitWidth="28.0" pickOnBounds="true"
+                           preserveRatio="true">
                     <image>
-                        <Image url="@../images/HboxIcons/minimize.png" />
+                        <Image url="@../images/HboxIcons/minimize.png"/>
                     </image>
                 </ImageView>
             </graphic>
         </Button>
-      <Pane layoutX="279.0" layoutY="54.0" prefHeight="620.0" prefWidth="898.0" style="-fx-background-color: blue;" />
+        <Pane fx:id="panelNotes" layoutX="279.0" layoutY="54.0" prefHeight="620.0" prefWidth="898.0"
+              style="-fx-background-color: blue;">
+            <children>
+                <TableView layoutX="109.0" layoutY="90.0" prefHeight="458.0" prefWidth="729.0">
+                    <columns>
+                        <TableColumn prefWidth="138.39999389648438" text="Matiéres/Modules"/>
+                        <TableColumn prefWidth="68.79998779296875" text="Controle 1"/>
+                        <TableColumn prefWidth="83.20001220703125" text="Controle 2"/>
+                        <TableColumn prefWidth="70.4000244140625" text="Controle 3"/>
+                        <TableColumn prefWidth="94.39996337890625" text="Moyenne"/>
+                        <TableColumn prefWidth="100.79998779296875" text="Coefficient"/>
+                        <TableColumn prefWidth="171.9998779296875" text="Moyenne * Coefficient"/>
+                    </columns>
+                </TableView>
+                <Label layoutX="369.0" layoutY="24.0" text="Mes notes">
+                    <font>
+                        <Font name="MontserratSubrayada-Bold" size="24.0"/>
+                    </font>
+                </Label>
+                <Label layoutX="519.0" layoutY="549.0" prefHeight="22.0" prefWidth="136.0"
+                       style="-fx-border-color: red;" text="Moyenne générale :" textFill="#05071f">
+                    <font>
+                        <Font name="System Bold" size="14.0"/>
+                    </font>
+                </Label>
+                <TextField editable="false" layoutX="659.0" layoutY="548.0" prefHeight="25.0" prefWidth="179.0"/>
+            </children>
+        </Pane>
 
 
     </children>
     <effect>
-        <DropShadow color="#1b1eeb" />
+        <DropShadow color="#1b1eeb"/>
     </effect>
 </AnchorPane>
